<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/spacing_medium"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/group_picture"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/group_picture"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_name"
            android:layout_toRightOf="@id/group_picture"
            android:layout_toEndOf="@id/group_picture"
            android:text="@string/event_name"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="@dimen/spacing_medium"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_description"
            android:layout_toRightOf="@id/group_picture"
            android:layout_toEndOf="@id/group_picture"
            android:layout_below="@id/event_name"
            android:text="@string/event_description"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/event_date"
            android:layout_toRightOf="@id/group_picture"
            android:layout_toEndOf="@id/group_picture"
            android:layout_below="@id/event_description"
            android:text="@string/event_date"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/group_name"
            android:layout_toRightOf="@id/group_picture"
            android:layout_toEndOf="@id/group_picture"
            android:layout_below="@id/event_date"
            android:text="@string/group_name"
            android:maxLines="1"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            />
    </RelativeLayout>
</android.support.v7.widget.CardView>
