<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:paddingTop="@dimen/image_medium_padding"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:gravity="bottom">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/user_image"
        android:contentDescription="@string/user_image"
        android:src="@drawable/image_placeholder"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="@string/users_name"
        android:id="@+id/users_name"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="@string/user_email"
        android:id="@+id/user_email"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/spacing_small"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginBottom="@dimen/spacing_medium"
        />
</LinearLayout>