<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="team.chronus.amona.presentation.detail.DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.65"
        android:id="@+id/map_container"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/meet_up_name"
            android:textSize="@dimen/text_size_large"
            android:text="@string/event_name"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:padding="@dimen/spacing_medium"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:id="@+id/meet_up_address"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/event_address"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:padding="@dimen/spacing_medium"
            android:drawableLeft="@drawable/location_small"
            android:drawableStart="@drawable/location_small"
            android:drawablePadding="@dimen/spacing_medium"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/long_event_desc"
                android:textSize="@dimen/text_size_small"
                android:text="@string/long_event_desc"
                android:textColor="@android:color/black"
                android:padding="@dimen/spacing_medium"
                />
        </ScrollView>
    </LinearLayout>
</LinearLayout>
